--- a/playbooks/roles/info_healthy/tasks/artefact.yaml
+++ b/playbooks/roles/info_healthy/tasks/artefact.yaml
@@ -1,7 +1,7 @@
 ---
 - name: Look for artefact
   when: artefact_paths | length > 0
-  changed_when: _result.files is defined and _result.files | length > 0
+  changed_when: false
   ansible.builtin.find:
     paths: "{{ artefact_paths }}"
     patterns: "{{ artefact_patterns }}"
