--- a/playbooks/roles/info_healthy/tasks/issue.yaml
+++ b/playbooks/roles/info_healthy/tasks/issue.yaml
@@ -1,6 +1,6 @@
 ---
 - name: Grep system log for an issue
-  changed_when: _result.stdout | length > 0
+  changed_when: false
   failed_when: _result.stderr | length > 0 or _result.rc > 0
   ansible.builtin.shell:
     cmd: |-
