feed targets info files asap

--- a/playbooks/roles/setup_common/tasks/main.yaml
+++ b/playbooks/roles/setup_common/tasks/main.yaml
@@ -133,6 +133,11 @@
           tags:
             - nginx-config
 
+        - name: Targets
+          ansible.builtin.include_tasks: "{{ role_path }}/../../../playbooks/roles/info_common/tasks/targets.yaml"
+          tags:
+            - targets
+
     - name: Prometheus Node Exporter
       when: node_metrics
       ansible.builtin.import_tasks: node-exporter.yaml
