--- a/playbooks/roles/setup_common/defaults/main.yaml
+++ b/playbooks/roles/setup_common/defaults/main.yaml
@@ -12,9 +12,9 @@ desired_debian_release: ""
 kernel_debian_backports: false
 kernel_debian_cloud: false
 
-# vanilla kernel
-kernel_vanilla: false
-kernel_vanilla_build: "{{ kernel_vanilla | ternary('yes', 'no') }}"
+# build Linux kernel from Git sources
+kernel_git: "{{ kernel_git_repo_url | length > 0 }}"
+kernel_git_build: "{{ kernel_git | ternary('yes', 'no') }}"
 kernel_git_repo_url: ""
 kernel_git_version: ""
 kernel_git_patches: []
