--- a/playbooks/roles/info_common/tasks/main.yaml
+++ b/playbooks/roles/info_common/tasks/main.yaml
@@ -6,10 +6,25 @@
       firstmatch: true
       mode: "0644"
   block:
-    - name: Create Prometheus config files
-      ansible.builtin.import_tasks: targets.yaml
+    - name: Dryrun of unattended-upgrade
+      ansible.builtin.import_tasks: dry-update.yaml
       tags:
-        - targets
+        - dry-update
+
+    - name: Firewall
+      ansible.builtin.import_tasks: firewall.yaml
+      tags:
+        - firewall
+
+    - name: Log unattended
+      ansible.builtin.import_tasks: log-unattended.yaml
+      tags:
+        - log-unattended
+
+    - name: Log nginx error
+      ansible.builtin.import_tasks: log-nginx.yaml
+      tags:
+        - log-nginx
 
     - name: Uname
       ansible.builtin.import_tasks: uname.yaml
