--- a/playbooks/roles/setup_common/tasks/kernel-deb.yaml
+++ b/playbooks/roles/setup_common/tasks/kernel-deb.yaml
@@ -1,9 +1,8 @@
 ---
-- name: Debian kernel
-  when: ansible_facts.distribution in ('Debian')
+- name: Desired Debian kernel
+  when: kernel_debian_backports or kernel_debian_cloud
   block:
-    - name: Install desired Debian kernel
-      when: kernel_debian_backports or kernel_debian_cloud
+    - name: Install Debian kernel
       vars:
         _arch: "{{ (ansible_facts.architecture == 'x86_64') | ternary('amd64', 'arm64') }}"
         _backports: "{{ kernel_debian_backports | ternary('-backports', '') }}"
@@ -16,7 +15,7 @@
       notify: Reboot system
 
     - name: Handle new Debian kernel
-      when: _kernel_dist is defined and _kernel_dist.changed
+      when: _kernel_dist.changed
       block:
         - name: Reboot into new Debian kernel
           ansible.builtin.meta: flush_handlers
