--- a/playbooks/roles/setup_snowflake/tasks/snowflake-src.yaml
+++ b/playbooks/roles/setup_snowflake/tasks/snowflake-src.yaml
@@ -30,3 +30,9 @@
     mode: a+x
     remote_src: true
   notify: Restart Snowflake
+
+- name: Add systemd unit
+  ansible.builtin.template:
+    src: snowflake-proxy.service.j2
+    dest: /etc/systemd/system/snowflake-proxy.service
+  notify: Restart Snowflake
