--- a/playbooks/roles/info_snowflake/tasks/log-nat.yaml
+++ b/playbooks/roles/info_snowflake/tasks/log-nat.yaml
@@ -3,7 +3,7 @@
   changed_when: false
   ansible.builtin.shell:
     cmd: |-
-      journalctl -u snowflake-proxy --since "{{ log_proxy_since }}" -g "NAT type:" --quiet |
+      journalctl -u {{ item.name }} --since "{{ log_proxy_since }}" -g "NAT type:" --quiet |
         tail -n 1 |
         cut -f 10 -d ' '
   register: _result
@@ -13,6 +13,6 @@
   throttle: 1
   ansible.builtin.lineinfile:
     line: "{{ inventory_hostname }} {{ _result.stdout }}"
-    path: "{{ tmp_dir }}/snowflake_nat"
+    path: "{{ tmp_dir }}/{{ item.name }}_nat"
     regexp: "^{{ inventory_hostname }} "
     state: "{{ (_result.stdout | length > 0) | ternary('present', 'absent') }}"
