--- a/playbooks/roles/info_snowflake/tasks/version.yaml
+++ b/playbooks/roles/info_snowflake/tasks/version.yaml
@@ -1,13 +1,9 @@
 ---
-- name: Gather installed packages
-  when: snowflake_build_from_source is not defined or not snowflake_build_from_source
-  ansible.builtin.package_facts:
-
 - name: Snowflake version
   changed_when: false
   ansible.builtin.shell:
     cmd: |-
-      snowflake-proxy --version 2>&1 |
+      /usr/bin/{{ item.name }} --version 2>&1 |
         head -n 1 |
         cut -f 2- -d ' ' |
         tr ' ' '_'
@@ -17,10 +13,9 @@
   delegate_to: localhost
   throttle: 1
   vars:
-    _package: "{{ ansible_facts.packages['snowflake-proxy'][0].version | default('-') }}"
     _version: "{{ _result.stdout | default('-') }}"
   ansible.builtin.lineinfile:
-    line: "{{ inventory_hostname }} sf {{ _version }} {{ _package }}"
-    path: "{{ tmp_dir }}/snowflake_version"
+    line: "{{ inventory_hostname }} sf {{ _version }}"
+    path: "{{ tmp_dir }}/{{ item.name }}_version"
     regexp: "^{{ inventory_hostname }} "
     state: "{{ (_result.stdout | length > 0) | ternary('present', 'absent') }}"
