--- a/playbooks/roles/setup_common/tasks/targets.yaml
+++ b/playbooks/roles/setup_common/tasks/targets.yaml
@@ -26,8 +26,11 @@
       delegate_to: localhost
       throttle: 1
       ansible.builtin.lineinfile:
-        path: "{{ tmp_dir }}/targets_snowflake.yaml"
+        path: "{{ tmp_dir }}/targets_{{ item.name }}.yaml"
         state: "{{ (snowflake_metrics | default(false)) | ternary('present', 'absent') }}"
+      loop_control:
+        label: "{{ item.name }}"
+      loop: "{{ snowflake_proxies | default([]) }}"
 
     - name: Tor bridge targets
       delegate_to: localhost
