--- a/playbooks/roles/setup_common/tasks/system-config.yaml
+++ b/playbooks/roles/setup_common/tasks/system-config.yaml
@@ -99,11 +99,10 @@
   notify:
     - Reload systemd
 
-- name: No apport
+- name: Disable apport service
   when: ansible_facts.distribution in ('Ubuntu')
-  ansible.builtin.apt:
-    name:
-      - apport
-      - whoopsie
-      - whoopsie-preferences
-    state: absent
+  ansible.builtin.systemd_service:
+    name: apport
+    state: stopped
+    enabled: false
+    no_block: true
