--- a/playbooks/roles/info_healthy/tasks/ipv6.yaml
+++ b/playbooks/roles/info_healthy/tasks/ipv6.yaml
@@ -3,8 +3,7 @@
   delegate_to: localhost
   throttle: 1
   vars:
-    _is_global: "{{ ansible_facts.default_ipv6.address is defined and
-      ansible_facts.default_ipv6.address is not match('fe80::') }}"
+    _is_global: "{{ ansible_facts.default_ipv6.address is not match('fe80::') }}"
   changed_when: not _is_global
   ansible.builtin.lineinfile:
     line: "{{ inventory_hostname }} {{ ansible_facts.default_ipv6.address }}"
