--- a/playbooks/roles/setup_snowflake/tasks/validate.yaml
+++ b/playbooks/roles/setup_snowflake/tasks/validate.yaml
@@ -3,5 +3,5 @@
   ansible.builtin.assert:
     quiet: true
     that:
-      - "ansible_facts.default_ipv6.address is defined"
       - "ansible_facts.default_ipv6.address is not match('fe80::')"
+      - "ansible_facts.default_ipv6.address is not search('::1$')"
