--- a/playbooks/roles/setup_common/defaults/main.yaml
+++ b/playbooks/roles/setup_common/defaults/main.yaml
@@ -140,6 +140,7 @@ kernel_git_config: |-
   CONFIG_NETFILTER_XT_MATCH_STATE=m
   CONFIG_NETFILTER_XT_NAT=m
   CONFIG_NETFILTER_XT_SET=m
+  CONFIG_NETFILTER_XTABLES_LEGACY=y
   CONFIG_NF_CONNTRACK=m
   CONFIG_NF_CT_NETLINK=m
   CONFIG_NF_NAT=m
