--- a/playbooks/roles/setup_common/handlers/main.yaml
+++ b/playbooks/roles/setup_common/handlers/main.yaml
@@ -46,6 +46,7 @@
     connect_timeout: 2
     reboot_timeout: "{{ 60 + _additional_timeout_tor | int }}"
     post_reboot_delay: 10
+    test_command: "iptables -nvL"
 
 - name: Gather new kernel version after reboot
   listen: Reboot system
