--- a/playbooks/roles/setup_autoupdate/tasks/autoupdate-apt.yaml
+++ b/playbooks/roles/setup_autoupdate/tasks/autoupdate-apt.yaml
@@ -9,7 +9,7 @@
     - 50unattended-upgrades
   notify: Reload systemd
 
-- name: Activate unattended-upgrades
+- name: Enable unattended-upgrades
   ansible.builtin.systemd_service:
     name: unattended-upgrades
     state: started
