--- a/playbooks/roles/setup_common/tasks/main.yaml
+++ b/playbooks/roles/setup_common/tasks/main.yaml
@@ -76,6 +76,7 @@
         - tools-apt
 
     - name: IPv6
+      when: ansible_facts.default_ipv6.address is defined
       tags:
         - ipv6
       block:
@@ -88,10 +89,10 @@
           ansible.builtin.import_tasks: ipv6-ionos.yaml
 
         - name: Ensure IPv6 address is global scope
-          when: ansible_facts.default_ipv6.address is match('fe80::')
-          failed_when: true
-          ansible.builtin.debug:
-            var: ansible_facts.default_ipv6
+          ansible.builtin.assert:
+            quiet: true
+            that:
+              - "ansible_facts.default_ipv6.address is not match('fe80::')"
 
     - name: Firewall
       ansible.builtin.import_tasks: firewall.yaml
