fix ipv6 syntax

--- a/playbooks/roles/info_healthy/tasks/main.yaml
+++ b/playbooks/roles/info_healthy/tasks/main.yaml
@@ -21,7 +21,7 @@
     - name: IPv6
       ansible.builtin.import_tasks: ipv6.yaml
       tags:
-        - ipv6
+        - ipv6-healthy
 
     - name: Issue
       ansible.builtin.import_tasks: issue.yaml
