--- a/playbooks/roles/info_healthy/tasks/ipv6.yaml
+++ b/playbooks/roles/info_healthy/tasks/ipv6.yaml
@@ -2,11 +2,13 @@
 - name: File IPv6 address
   delegate_to: localhost
   throttle: 1
-  vars:
-    _is_global: "{{ ansible_facts.default_ipv6.address is not match('fe80::') }}"
   changed_when: not _is_global
+  vars:
+    _is_global: "{{ ansible_facts.default_ipv6.address is defined
+      and ansible_facts.default_ipv6.address | length > 0
+      and ansible_facts.default_ipv6.address is not match('fe80::') }}"
   ansible.builtin.lineinfile:
-    line: "{{ inventory_hostname }} {{ ansible_facts.default_ipv6.address }}"
+    line: "{{ inventory_hostname }} {{ ansible_facts.default_ipv6.address | default('n/a') }}"
     path: "{{ tmp_dir }}/ipv6"
     regexp: "^{{ inventory_hostname }} "
     state: "{{ _is_global | ternary('present', 'absent') }}"
