--- a/playbooks/roles/setup_common/tasks/ipv6-hetzner.yaml
+++ b/playbooks/roles/setup_common/tasks/ipv6-hetzner.yaml
@@ -8,22 +8,22 @@
   ansible.builtin.assert:
     quiet: true
     that:
+      - "ansible_facts.default_ipv6.address | length > 0"
       - "ansible_facts.default_ipv6.address is not match('fe80::')"
 
 - name: Change IPv6 to non-default ::1
   when: ansible_facts.default_ipv6.address != _ipv6_new
   vars:
+    _a: "{{ '%x' % (range(0, 65535) |
+      random(seed=seed_address + inventory_hostname + ansible_facts.default_ipv4.address + 'A' + _ipv6_prefix)) }}"
+    _b: "{{ '%x' % (range(0, 65535) |
+      random(seed=seed_address + inventory_hostname + ansible_facts.default_ipv4.address + 'B' + _ipv6_prefix)) }}"
+    _c: "{{ '%x' % (range(0, 65535) |
+      random(seed=seed_address + inventory_hostname + ansible_facts.default_ipv4.address + 'C' + _ipv6_prefix)) }}"
+    _d: "{{ '%x' % (range(0, 65535) |
+      random(seed=seed_address + inventory_hostname + ansible_facts.default_ipv4.address + 'D' + _ipv6_prefix)) }}"
     _ipv6_prefix: "{{ (ansible_facts.default_ipv6.address | split(':'))[:4] | join(':') }}"
-    _a: "{{ range(0, 65535) |
-      random(seed=seed_address + inventory_hostname + ansible_facts.default_ipv4.address + 'A' + _ipv6_prefix) }}"
-    _b: "{{ range(0, 65535) |
-      random(seed=seed_address + inventory_hostname + ansible_facts.default_ipv4.address + 'B' + _ipv6_prefix) }}"
-    _c: "{{ range(0, 65535) |
-      random(seed=seed_address + inventory_hostname + ansible_facts.default_ipv4.address + 'C' + _ipv6_prefix) }}"
-    _d: "{{ range(0, 65535) |
-      random(seed=seed_address + inventory_hostname + ansible_facts.default_ipv4.address + 'D' + _ipv6_prefix) }}"
-    # yamllint disable-line rule:line-length
-    _ipv6_new: "{{ _ipv6_prefix }}:{{ '%x' % (_a | int) }}:{{ '%x' % (_b | int) }}:{{ '%x' % (_c | int) }}:{{ '%x' % (_d | int) }}"
+    _ipv6_new: "{{ _ipv6_prefix }}:{{ _a }}:{{ _b }}:{{ _c }}:{{ _d }}"
   block:
     - name: Change IPv6 for Debian
       when: ansible_facts.distribution in ('Debian')
