--- a/playbooks/roles/setup_common/tasks/validate.yaml
+++ b/playbooks/roles/setup_common/tasks/validate.yaml
@@ -6,6 +6,14 @@
       - "ansible_facts.distribution in ('Debian', 'Ubuntu')"
 
 - name: Validate metrics_port
+  ansible.builtin.assert:
+    quiet: true
+    that:
+      - "ansible_facts.default_ipv6.address is defined"
+      - "ansible_facts.default_ipv6.address | length > 0"
+      - "ansible_facts.default_ipv6.address is not match('fe80::')"
+
+- name: Validate metrics_port
   when: metrics_port > 0
   ansible.builtin.assert:
     quiet: true
